--- a/nested.html
+++ b/nested.html
@@ -25,7 +25,7 @@
         <li>Sample</li>
         <li>Sample</li>
         <li>Sample</li>
-        <ul>
+        <ul type="disc">
           <li>Sample</li>
           <li>Sample</li>
           <li>Sample</li>
@@ -34,3 +34,4 @@
     </ol>
   </body>
 </html>
+
